[project]
name = "osint-prober"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.3",
    "duckduckgo-search>=8.1.1",
    "flashrank>=0.2.10",
    "html2text>=2025.4.15",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.10",
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "rank-bm25>=0.2.2",
    "requests>=2.32.0",
    "streamlit>=1.55.0",
    "streamlit-agraph>=0.0.45",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "wikipedia>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
